--- a/TSSS/package.json
+++ b/TSSS/package.json
@@ -8,9 +8,12 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
-    "@types/ws": "^8.18.0",
-    "typescript": "^5.7.3"
-  }
+    "typescript": "^5.7.3",
+    "ws": "^8.18.1"
+  },
+  "devDependencies": {
+    "@types/ws": "^8.18.0"
+  },
+  "description": ""
 }
